# release-readiness-check

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: readiness-report.yml  tests.yml
src/release_readiness_check/: __init__.py  checker.py  cli.py
tests/: test_checker.py  test_cli.py
